--- a/styles.css
+++ b/styles.css
@@ -22,19 +22,33 @@ nav ul li:hover {
 body {
     background-color: #f8e8a0;
 }
-img {
+.logo {
     width: auto;
-    height: 130px;
-    margin-top: 10px;
-    border-radius: 10px;
+    height: 200px;
+    margin-top: 0px;
+    margin-right: 20px;
+    border-radius: 15px;
 }
 .intro {
     display: flex;
-    justify-content: relative;
-    align-items: relative;
-    flex-direction: row;
-    margin-top: 20px;
+    align-items: center;
+    margin-top: 10px;
 }
-h1 p{
-    flex:right;
+.intro {
+    margin-right: 20px;
+}
+h1 {
+    margin-left: 20px;
+    margin-bottom: 5px;
+    font-size: 70px;
+    margin-top: 20px;   
+    font-weight: bold; 
+}
+.intro p {
+    position: relative;
+    margin-top: 0px;
+    margin-left: 300px;
+    font-size: 40px;
+    font-weight: bold;
+
 }
