text added to navigation bar

--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,26 @@ h1 {
     flex-wrap: wrap; /* Allow items to wrap to the next line */
     gap: 20px; /* Add space between the items */
 }
+nav {
+    display: flex;
+    justify-content:right;
+    background-color: #000000;
+    padding: 0rem;
+}
+nav ul {
+    list-style: none;
+    display: flex;
+    gap: 2rem;
+    margin-right: 20px;
+}
+nav ul li {
+    color: white;
+    font-size: 2rem;
+    font-weight: bold;
+}
+nav ul li:hover {
+    color: #e70909;
+    cursor: pointer;
 footer {
     text-align: center;
     background-color: #0f0e0e;
