--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,7 @@ nav ul li {
 nav ul li:hover {
     color: #e70909;
     cursor: pointer;
+}
 footer {
     text-align: center;
     background-color: #0f0e0e;
