images change and styling changes on image no.3

--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ h1 {
     border-radius: 20px; 
     border-width: 8px;
     width: auto;
-    height: 600px
+    height: 570px;
 }
 .imagetext {
     font-size: 20px;
